--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=a00a56b2fc035ce0feedbaa8162ef3ea",
-    "/css/app.css": "/css/app.css?id=9c2804743ef976c4293e5c7178265e37"
+    "/build/assets/app.js": "/build/assets/app.js?id=d3e6db033892d665827cd4bd6b100b9f",
+    "/build/assets/app.css": "/build/assets/app.css?id=9c2804743ef976c4293e5c7178265e37"
 }
