--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
     "private": true,
-   "scripts": {
-    "dev": "vite",              
-    "build": "vite build",      
-    "serve": "vite preview"    
+    "scripts": {
+      "dev": "vite",
+      "build": "vite build",
+      "serve": "vite preview"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.10",
-        "@babel/preset-env": "^7.26.9",
-        "babel-loader": "^10.0.0",
-        "bootstrap": "^5.3.3",
-        "laravel-mix": "^6.0.49",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.85.1",
-        "sass-loader": "^12.6.0",
-        "webpack": "^5.98.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.7.4"
+      "vite": "^4.0.0",
+      "laravel-vite-plugin": "^0.7.0",
+      "bootstrap": "^5.3.3",
+      "sass": "^1.85.1",
+      "sass-loader": "^12.6.0",
+      "autoprefixer": "^10.4.12",
+      "postcss": "^8.4.16",
+      "tailwindcss": "^4.0.11",
+      "alpinejs": "^3.14.8"
     },
     "dependencies": {
-        "alpinejs": "^3.14.8",
-        "axios": "^1.8.1",
-        "chart.js": "^4.4.8",
-        "tailwindcss": "^4.0.11"
+      "axios": "^1.8.1",
+      "chart.js": "^4.4.8"
     },
-    "name": "html",
+    "name": "surfing-app",
     "version": "1.0.0",
-    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
-    "main": "postcss.config.js",
-    "directories": {
-        "test": "tests"
-    },
-    "keywords": [],
+    "description": "Surfing App with Vite and Laravel",
+    "main": "vite.config.js",
     "author": "",
     "license": "ISC",
-    "type": "commonjs"
-}
+    "type": "module"
+  }
+  
