--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
     "private": true,
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "serve": "vite preview"
+        "dev": "vite",
+        "build": "vite build",
+        "serve": "vite preview"
     },
     "devDependencies": {
-      "vite": "^4.0.0",
-      "laravel-vite-plugin": "^0.7.0",
-      "bootstrap": "^5.3.3",
-      "sass": "^1.85.1",
-      "sass-loader": "^12.6.0",
-      "autoprefixer": "^10.4.12",
-      "postcss": "^8.4.16",
-      "tailwindcss": "^4.0.11",
-      "alpinejs": "^3.14.8"
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
+        "bootstrap": "^5.3.3",
+        "laravel-vite-plugin": "^0.7.0",
+        "postcss": "^8.4.31",
+        "sass": "^1.85.1",
+        "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.1.0",
+        "vite": "^4.0.0"
     },
     "dependencies": {
-      "axios": "^1.8.1",
-      "chart.js": "^4.4.8"
+        "axios": "^1.8.1",
+        "chart.js": "^4.4.8"
     },
     "name": "surfing-app",
     "version": "1.0.0",
@@ -27,5 +28,4 @@
     "author": "",
     "license": "ISC",
     "type": "module"
-  }
-  
+}
